tests/golden/errors/fn_order.kso
fn zeta x
  x

pub play = print "{zeta 1}"
