tests/golden/errors/fn_order.stderr
error[formatting]: function declarations appear in alphabetical order: `play` before `zeta`
  --> fn_order.kso:4:5
   4 | pub play = print "{zeta 1}"
           ^
